--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.3",
     "mysql2": "^2.3.3",
     "pug": "^2.0.3",
     "sequelize": "^6.28.0"
