--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^2.7.4",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "mysql2": "^2.3.3",
