--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "ejs": "^2.7.4",
     "express": "^4.16.3",
