--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
     "mysql2": "^2.3.3",
+    "node-mailjet": "^6.0.1",
     "pug": "^2.0.3",
     "sequelize": "^6.28.0"
   }
