--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "express-validator": "^6.14.3",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-mailjet": "^6.0.1",
+    "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
     "sequelize": "^6.28.0"
   }
